hphp/hack/test/typecheck/class_pointers/type_structure_array_pos.php.exp
ERROR: File "type_structure_array_pos.php", line 13, characters 37-46:
It is no longer allowed to use a `classname<ScriptEmptyController>` in this position. Please use a `class<ScriptEmptyController>` instead. (Typing[4482])
  File "type_structure_array_pos.php", line 8, characters 13-27:
  Definition is here
